--- a/app/src/main/res/layout/activity_coche1.xml
+++ b/app/src/main/res/layout/activity_coche1.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F40795"
     tools:context=".Coche_1">
 
     <ImageView
