--- a/app/src/main/res/layout/activity_coche1.xml
+++ b/app/src/main/res/layout/activity_coche1.xml
@@ -20,7 +20,7 @@
         app:srcCompat="@drawable/coche_1" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Seleccionar"
@@ -32,10 +32,10 @@
         app:layout_constraintVertical_bias="0.901" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="<-"
+        android:text="@string/flecha"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.349"
@@ -44,10 +44,10 @@
         app:layout_constraintVertical_bias="0.805" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="->"
+        android:text="@string/flecha_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.659"
