--- a/app/src/main/res/layout/activity_coche3.xml
+++ b/app/src/main/res/layout/activity_coche3.xml
@@ -44,10 +44,10 @@
         app:layout_constraintVertical_bias="0.13" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="<-"
+        android:text="@string/flecha"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.349"
@@ -56,10 +56,10 @@
         app:layout_constraintVertical_bias="0.805" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/button11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="->"
+        android:text="@string/flecha_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.659"
