--- a/app/src/main/res/layout/activity_coche5.xml
+++ b/app/src/main/res/layout/activity_coche5.xml
@@ -30,10 +30,10 @@
         app:layout_constraintVertical_bias="0.901" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/button9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="<-"
+        android:text="@string/flecha"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.349"
@@ -42,10 +42,10 @@
         app:layout_constraintVertical_bias="0.805" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/button10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="->"
+        android:text="@string/flecha_1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.659"
