--- a/app/src/main/res/layout/activity_cars.xml
+++ b/app/src/main/res/layout/activity_cars.xml
@@ -76,12 +76,13 @@
         android:id="@+id/setCar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Seleccionar"
+        android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.866" />
+        app:layout_constraintVertical_bias="0.857" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
