--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,14 +34,14 @@
         app:layout_constraintVertical_bias="0.818" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="179dp"
-        android:layout_height="321dp"
+        android:id="@+id/imageView2"
+        android:layout_width="198dp"
+        android:layout_height="355dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/monito_bisi" />
+        app:srcCompat="@drawable/monito" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
