--- a/app/src/main/res/layout/activity_menu_cars.xml
+++ b/app/src/main/res/layout/activity_menu_cars.xml
@@ -58,7 +58,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.833"
-        app:srcCompat="@drawable/boton_coche" />
+        app:srcCompat="@drawable/boton_coche"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
